# cuTAMP

./: .env.sample  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  nvidia_icd_glx.json  pyproject.toml
cutamp/: algorithm.py  cartesian_planner.py  config.py  constraint_checker.py  cost_function.py  cost_reduction.py  costs.py  costs_warp.py  experiment_logger.py  motion_solver.py  optimize_plan.py  particle_initialization.py  retrieval.py  robots.py  rollout.py  samplers.py  stream_initializers.py  tamp_domain.py  tamp_world.py  vlm_tamp.py
cutamp/clients/: __init__.py  vlm_client.py
cutamp/envs/: __init__.py  mini_kitchen.py  utils.py
cutamp/robots/: __init__.py  franka.py  ur5.py  xarm7.py
cutamp/robots/assets/: xarm7.yml
cutamp/robots/assets/xarm7/: xarm7.urdf
cutamp/scripts/: benchmark_retrieval.py  benchmark_vlm.py  collect_retrieval_data.py  run_cutamp.py  run_vlm_tamp.py  utils.py
cutamp/sim/: __init__.py  pybullet_render.py  pybullet_scene.py  pybullet_sync.py  rollout_video.py
cutamp/sim/assets/mini_kitchen/: README.md  big_table.urdf  bowl.urdf  cabinet_unit.urdf  counter.urdf  drawer_unit.urdf  fork.urdf  mug.urdf  plate.urdf  sources.json  spoon.urdf  table.urdf
cutamp/sim/assets/mini_kitchen/kitchen_models/Bowl/0000/: cuTAMP_bowl.urdf
cutamp/sim/assets/mini_kitchen/kitchen_models/Drinks/GreyMug/: cuTAMP_grey_mug.urdf
cutamp/sim/assets/mini_kitchen/kitchen_models/Plate/SquarePlate/: cuTAMP_square_plate.urdf
cutamp/task_planning/: __init__.py  base_structs.py  constraints.py  search.py  tamp_structs.py
cutamp/utils/: collision.py  common.py  math.py  obb.py  rerun_utils.py  shapes.py  timer.py  visualizer.py
examples/: run_cutamp.py
examples/envs/: __init__.py  book_shelf.py  stick_button.py  tetris.py
tests/: __init__.py  test_vlm_tamp.py
