# Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
#
# NVIDIA CORPORATION, its affiliates and licensors retain all intellectual
# property and proprietary rights in and to this material, related
# documentation and any modifications thereto. Any use, reproduction,
# disclosure or distribution of this material and related documentation
# without an express license agreement from NVIDIA CORPORATION or
# its affiliates is strictly prohibited.

[project]
name = "cuTAMP"
version = "0.0.1"
description = "cuTAMP"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["robotics"]
authors = []
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    # Core
    "einops",
    "jaxtyping",
    "omegaconf",
    "open3d",
    "opencv-python",
    "rerun-sdk",
    "roma",
    "tqdm",
    "trimesh",
    "yourdfpy",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchvision==0.22.0",
    "warp-lang==1.12.1",
    # VLM stacks
    "transformers>=5.4.0",
    # Third-party integrations
    "nvidia-curobo",
    "cuda-core[cu12]>=0.7",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 120
exclude = ["cutamp/robots/assets"]

[project.scripts]
cutamp-demo = "cutamp.scripts.run_cutamp:entrypoint"

[tool.setuptools.packages]
find = { include = ["cutamp", "cutamp.*"] }

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
cutamp = [
    "envs/assets/**/*",
    "robots/assets/**/*",
]

[tool.uv.sources]
torchaudio = { index = "torch" }
torch = { index = "torch" }
torchvision = { index = "torch" }

# Local sources
nvidia-curobo = { git = "https://github.com/makolon/curobo.git" }

[[tool.uv.index]]
explicit = true
name = "torch"
url = "https://download.pytorch.org/whl/cu128"

[[tool.uv.index]]
explicit = false
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.extra-build-dependencies]
curobo = ["torch"]
